--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2018.4.16
 chardet==3.0.4
+codacy-coverage==1.3.11
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==4.5.1
 Django==2.0.5
 django-cors-headers==2.2.0
 django-extensions==2.0.7
