Create local enviroment and fix travis

--- a/compose/local/Dockerfile
+++ b/compose/local/Dockerfile
@@ -23,8 +23,8 @@ WORKDIR /software
 RUN pip3 install -r requirements.txt
 
 # Run the dev script before and after any command
-RUN chmod +x compose/test/test.sh
-ENTRYPOINT ["compose/test/test.sh"]
+RUN chmod +x compose/local/local.sh
+ENTRYPOINT ["compose/local/local.sh"]
 
 # Run the server
-CMD ["python3", "manage.py", "test"]
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
