--- a/.travis.yml
+++ b/.travis.yml
@@ -14,18 +14,26 @@ branches:
 env:
   - DOCKER_COMPOSE_VERSION=1.17.1
 
+before_script:
+  - docker-compose up --build -d
+
 script:
-  - docker-compose -f docker-compose.test.yml up
+  - docker exec sdcurve coverage run --source="." manage.py test **/api/tests/
+  - docker exec sdcurve coverage report -m
+  - docker exec sdcurve coverage xml
+  - docker exec sdcurve python-codacy-coverage -r coverage.xml
 
 deploy:
   # deploy to staging enviroment
   - provider: script
     script: bash staging-deploy.sh
+    skip_cleanup: true
     on:
       branch: develop
 
   # deploy to production enviroment
   - provider: script
     script: bash production-deploy.sh
+    skip_cleanup: true
     on:
       branch: master
