--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -4,8 +4,8 @@ services:
   nginx-prod:
     image: nginx:latest
     volumes:
-      - ./nginx/production.conf:/etc/nginx/conf.d/production.conf
-      - ../sdcurve/staticfiles:/usr/share/nginx/html
+      - ./compose/nginx/production.conf:/etc/nginx/conf.d/production.conf
+      - ./sdcurve/staticfiles:/usr/share/nginx/html
     ports:
       - "8001:8000"
     depends_on:
