Adding a package to prevent warning
Adding apt-utils installation into Dockerfile
to prevent log warning in the build process

Co-authored-by: Victor Arnaud <victorhad@gmail.com>

--- a/compose/local/Dockerfile
+++ b/compose/local/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get update && apt-get install -y \
     python3-setuptools \
     gettext \
     vim \
-    build-essential
+    build-essential \
+    apt-utils
 
 # Install pip dependecies
 RUN pip3 install --upgrade pip
