--- a/compose/prod/Dockerfile
+++ b/compose/prod/Dockerfile
@@ -11,7 +11,8 @@ RUN apt-get update && apt-get install -y \
     vim \
     build-essential \
     postgresql \
-    postgresql-contrib
+    postgresql-contrib \
+    apt-utils
 
 # Install pip dependecies
 RUN pip3 install --upgrade pip
